<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="id.aasumitro.examplefragmentdialog.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/click_me_to_show_dialog"
        android:id="@+id/btn_pressMe"/>

    <Button
        android:id="@+id/just_alertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/press_me_to_show_alert_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pressMe" />

    <Button
        android:id="@+id/just_fragmentDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/just_alertDialog"
        android:text="@string/dialog_fragment_under_os_5_0_error" />

</android.support.constraint.ConstraintLayout>
